--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,7 @@
 {
-    "/scripts/main.js": "/scripts/main.js?id=166cda8355302688ef88",
+    "/scripts/main.js": "/scripts/main.js?id=ed84a26e332ffee98c1d",
     "/styles/main.css": "/styles/main.css?id=fbcf728b1e0bb8ef24a6",
+    "/images/favicon.png": "/images/favicon.png?id=2c62f3488c8bbc2e9809",
     "/images/tesla-m3-1024x640.jpeg": "/images/tesla-m3-1024x640.jpeg?id=561e1abbecb8cde10ffa",
     "/images/tesla-m3-150x150.jpeg": "/images/tesla-m3-150x150.jpeg?id=48fcfaa52e1c53d6ed2d",
     "/images/tesla-m3-1536x960.jpeg": "/images/tesla-m3-1536x960.jpeg?id=c59d7433177a12d244b7",
